#    GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program. If not, see <http://www.gnu.org/licenses/>
################################################################################
v0.8.0
- Refactor of core inventory and tiles for streamlined code reuse

MODIS
- fixed bug in MODIS temperature making them unable to be used in project (multiple identical output band names)

v0.7.1
- Better internal handling of sensors for data where there can be multiple sensors on a single day
- Tile projects (no shapefile or nomosaic set) now creates subdirectories for each tile in project folder
- Project inventories (gips_project inventory) doesn't fail if directory has extraneous files
- datadir option added back allowing saving of files into specified directory

New functionality
- 'gips_project stack' for creating stacks of products in a GIPS project directory
- added mapreduce utilities for multiprocessing
- added 'nomosaic' option to project, which will keep the data as tiles (but still warp)

AOD
- fixed retrieval of Aerosol Optical Depth from MOD08 data

LANDSAT
- products added: dn (digital numbers), volref (volumetric reflectance of water)
- Files read directly from tar.gz (rather than extracting) using GDAL's virtual filesystem

MODIS
- fixed segfault in indices and cleaned up extraneous printing
- fixed nodata value in ndvi8 product

v0.7.0
- Refactoring of inventory classes and printing
- Renaming of products to replace underscores (_) with dashes (-) in the product name
- Addition of gips_project script (print inventory, create browse images)
- Changed naming convention of project directories to shapefile_resolution_datasetname
- misc fixes/improvements to argument parsing and verbose output
- refactored argument parsing of products, now use -p switch rather than individual product switches
- added 'products' sub-command to get listing of available products